--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "socket.io-client": "^2.2.0",
     "vue": "^2.5.11",
     "vue-router": "^3.0.6",
+    "vue-session": "^1.0.0",
     "vuex": "^3.1.1"
   },
   "browserslist": [
