--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "heroku-postinstall": "npm install, npm run build"
   },
   "dependencies": {
     "ace-builds": "^1.4.4",
     "axios": "^0.19.0",
+    "express": "^4.17.1",
     "getusermedia": "^2.0.1",
+    "serve-static": "^1.14.1",
     "simple-peer": "^9.3.0",
     "socket.io-client": "^2.2.0",
     "vue": "^2.5.11",
