Fixed node links

--- a/backend/NodeJS/package.json
+++ b/backend/NodeJS/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postinstall": "npm install",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
